--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">gdxRPG2</string>
+    <string name="app_name">Adan Chronicles: Crystal of Time</string>
 
 </resources>
